--- a/calculator.html
+++ b/calculator.html
@@ -37,3 +37,9 @@
     <input type=''button'' value=''.'' onClick''document.Calculator.display.value'' style=''width:60px; height=60px; font-size=30; border-radius:8px''/>
     <input type=''button'' value=''/'' onClick''btnplus()'' style=''width:60px; height=60px; font-size=30; border-radius:8px''/>
     <br>
+    <script>
+      
+    </script>
+    </center>
+    </body>
+    </html>
